# tms

./: MANIFEST.in  README.md  pyproject.toml  setup.py
tms/: hooks.py
tms/config/: desktop.py
tms/tms/: hooks.py
tms/tms/doctype/carrier_invoice/: carrier_invoice.json  carrier_invoice.py
tms/tms/doctype/freight_audit_log/: freight_audit_log.json  freight_audit_log.py
tms/tms/doctype/telematics_provider_settings/: telematics_provider_settings.json  telematics_provider_settings.py
tms/tms/doctype/tms_dispatch/: tms_dispatch.json  tms_dispatch.py
tms/tms/doctype/tms_driver_contract/: tms_driver_contract.json  tms_driver_contract.py
tms/tms/doctype/tms_expected_cost_profile/: tms_expected_cost_profile.json  tms_expected_cost_profile.py
tms/tms/doctype/tms_route/: tms_route.json  tms_route.py
tms/tms/doctype/tms_route_stop/: tms_route_stop.json  tms_route_stop.py
tms/tms/doctype/tms_settlement/: tms_settlement.json  tms_settlement.py
tms/tms/doctype/tms_settlement_deduction/: tms_settlement_deduction.json  tms_settlement_deduction.py
tms/tms/doctype/vehicle_telemetry_log/: vehicle_telemetry_log.json  vehicle_telemetry_log.py
