[project]
name = "tms"
authors = [
    { name = "NexGen ERP Technologies", email = "admin@example.com"}
]
description = "Transportation Management System (TMS) & Advanced Fleet Operations app for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0"
